--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
@@ -31,21 +31,31 @@
     <form method="post">
         <div class="-mx-3 md:flex mb-6">
             <div class="md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.FlowerType">
-                    Flower Type
+                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.BatchName">
+                    Batch Name
                 </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.FlowerType" type="text">
-                <span asp-validation-for="Input.FlowerType" class="text-red text-xs italic"></span>
-            </div>
-            <div class="md:w-1/2 px-3">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.PricePerUnit">
-                    Price Per Unit
-                </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.PricePerUnit" type="number" step="0.01">
-                <span asp-validation-for="Input.PricePerUnit" class="text-red text-xs italic"></span>
+                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.BatchName" type="text">
+                <span asp-validation-for="Input.BatchName" class="text-red text-xs italic"></span>
             </div>
         </div>
-
+        <div class="-mx-3 md:flex mb-6">
+            <div class="md:w-1/2 px-3 mb-6 md:mb-0">
+                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.EventName">
+                    Event Name 
+                </label>
+                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.EventName" type="text">
+                <span asp-validation-for="Input.EventName" class="text-red text-xs italic"></span>
+            </div>
+        </div>
+        <div class="-mx-3 md:flex mb-6">
+            <div class="md:w-1/2 px-3 mb-6 md:mb-0">
+                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.EventDate">
+                    Event Date
+                </label>
+                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.EventDate" type="date">
+                <span asp-validation-for="Input.EventDate" class="text-red text-xs italic"></span>
+            </div>
+        </div>
         <div class="-mx-3 md:flex mb-6">
             <div class="md:w-full px-3">
                 <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.Description">
@@ -64,12 +74,12 @@
                 <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.BatchQuantity" type="number">
                 <span asp-validation-for="Input.BatchQuantity" class="text-red text-xs italic"></span>
             </div>
-            <div class="md:w-1/2 px-3">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.Condition">
-                    Condition
+            <div class="md:w-1/2 px-3 mb-6 md:mb-0">
+                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.RemainingQuantity">
+                    Remaining Quantity
                 </label>
-                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.Condition" type="text">
-                <span asp-validation-for="Input.Condition" class="text-red text-xs italic"></span>
+                <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.RemainingQuantity" type="number">
+                <span asp-validation-for="Input.RemainingQuantity" class="text-red text-xs italic"></span>
             </div>
         </div>
 
@@ -80,22 +90,6 @@
                 </label>
                 <input class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4" asp-for="Input.EntryDate" type="date">
                 <span asp-validation-for="Input.EntryDate" class="text-red text-xs italic"></span>
-            </div>
-            <div class="md:w-1/2 px-3">
-                <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" asp-for="Input.BatchStatus">
-                    Batch Status
-                </label>
-                <div class="relative">
-                    <select class="block appearance-none w-full bg-grey-lighter border border-grey-lighter text-grey-darker py-3 px-4 pr-8 rounded" asp-for="Input.BatchStatus">
-                        <option value="">-- Select Status --</option>
-                        <option value="Available">Available</option>
-                        <option value="SoldOut">Sold Out</option>
-                    </select>
-                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-grey-darker">
-                        <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
-                    </div>
-                </div>
-                <span asp-validation-for="Input.BatchStatus" class="text-red text-xs italic"></span>
             </div>
         </div>
 
