FE: fix header edit profile user

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Edit Batch";
 }
-<div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
+@* <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
     <h1 class="text-2xl font-bold mb-6">Edit Batch</h1>
 
     @if (!string.IsNullOrEmpty(TempData["SuccessMessage"] as string))
@@ -105,3 +105,4 @@
 </div>
 
 
+ *@
