--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -38,10 +38,10 @@
                         <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">
                             <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
                                 @{
-                                    var userId = HttpContextAccessor.HttpContext.Session.GetInt32("UserId");
-                                    if (userId.HasValue)
+                                    var userIdString = HttpContextAccessor.HttpContext.Session.GetString("UserId");
+                                    if (!string.IsNullOrEmpty(userIdString))
                                     {
-                                        <a href="/EditUser/@userId" class="block w-full">Edit Profile</a>
+                                        <a href="/EditUser/@userIdString" class="block w-full">Edit Profile</a>
                                     }
                                     else
                                     {
