--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchDetails.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchDetails.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Batch Details";
 }
-<div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
+@* <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
     <h1 class="text-2xl font-bold mb-6">Batch Details</h1>
     @if (Model.Batch != null)
     {
@@ -50,4 +50,4 @@
             Back to List
         </a>
     </div>
-</div>
+</div> *@
