--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Batch List";
 }
-<div class="container mx-auto px-4 mt-16 text-center">
+@* <div class="container mx-auto px-4 mt-16 text-center">
     <h1 class="text-3xl font-bold mb-8">Batch List</h1>
     <a href="/BatchPages/CreateBatch" class="inline-block px-6 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-700 transition duration-300 mb-8">Create New Batch</a>
     @if (Model.Batches != null && Model.Batches.Any())
@@ -64,4 +64,4 @@
             <p>No batches available at the moment.</p>
         </div>
     }
-</div>
+</div> *@
