--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_AdminNav.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_AdminNav.cshtml
@@ -34,11 +34,11 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/EventIndex" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
+                        <a href="/CompanyIndex" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
                             <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.994.89l-1 9A1 1 0 004 18h12a1 1 0 00.994-1.11l-1-9A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm2 5V6a2 2 0 10-4 0v1h4zm-6 3a1 1 0 112 0 1 1 0 01-2 0zm7-1a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd"></path>
                             </svg>
-                            <span class="ml-3 flex-1 whitespace-nowrap">Batch Management</span>
+                            <span class="ml-3 flex-1 whitespace-nowrap">Company Management</span>
                         </a>
                     </li>
                   
@@ -49,7 +49,7 @@
                     {
                         <div class="flex flex-col items-start pt-4">
                             <!-- Display user name -->
-                            <span class="text-base text-gray-900">Xin chào, @Context.Session.GetString("UserName")!</span>
+                            <span class="text-base text-gray-900 ml-3">Welcome, @Context.Session.GetString("UserName")!</span>
 
                             <!-- Logout button placed below the username -->
                             <form method="post" asp-page="/Login/Logout" class="flex items-start p-0 mt-2">
@@ -57,7 +57,7 @@
                                     <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M5 4a3 3 0 00-3 3v6a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3H5zm-1 9v-1h5v2H5a1 1 0 01-1-1zm7 1h4a1 1 0 001-1v-1h-5v2zm0-4h5V8h-5v2zM9 8H4v2h5V8z" clip-rule="evenodd"></path>
                                     </svg>
-                                    <span class="ml-3 flex-1 whitespace-nowrap">Đăng xuất</span>
+                                    <span class="ml-3 flex-1 whitespace-nowrap">Logout</span>
                                 </button>
                             </form>
                         </div>
